Created the header and navigation top

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,43 @@
     <link rel="stylesheet" href="css/amazon.css">
     <title>Amazon-shop</title>
 </head>
+
 <body>
-    
+    <!-- Headr -->
+    <header class="header">
+        <div class="container">
+            <div class="top">
+                <div class="logo">Amazonka</div>
+                <!-- /.logo -->
+                <ul class="nav">
+                    <li class="nav__item"><a href="#">Catalog</a></li>
+                    <li class="nav__item"><a href="#">reviews</a></li>
+                    <li class="nav__item"><a href="#">Category</a></li>
+                    <li class="nav__item"><a href="#">Contact</a></li>
+                </ul>
+                <!-- /.nav -->
+                <a href="tel: 18002503020" class="phone">1800-250-3020</a>
+            </div>
+            <!-- /.top -->
+
+    <div class="header-content">
+            <div class="header-content__text">
+                <h1 class="headr-content__title"> The best crutches for your code</h1>
+                <p class="headr-content__description">Do not invent a bicycle, we made crutches for you - use them, it's
+                    almost free
+                </p>
+                <button class="button">Choose a crutch</button>
+            </div>
+            <div class="headr-contet__img">
+                <img src="#" alt="">
+            </div>
+        </div>
+        <!-- /.header-content -->
+</div>
+<!-- /.container -->
+        
+    </header>
+    <!-- /.header -->
 </body>
+
 </html>
