--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Headr -->
     <header class="header">
         <div class="container">
-            <div class="top">
+            <div class="top header__top">
                 <div class="logo">Amazonka</div>
                 <!-- /.logo -->
                 <ul class="nav">
@@ -24,26 +24,27 @@
                     <li class="nav__item"><a href="#">Contact</a></li>
                 </ul>
                 <!-- /.nav -->
-                <a href="tel: 18002503020" class="phone">1800-250-3020</a>
+                <a href="tel:18002503020" class="phone">1800-250-3020</a>
             </div>
             <!-- /.top -->
 
-    <div class="header-content">
-            <div class="header-content__text">
-                <h1 class="headr-content__title"> The best crutches for your code</h1>
-                <p class="headr-content__description">Do not invent a bicycle, we made crutches for you - use them, it's
-                    almost free
-                </p>
-                <button class="button">Choose a crutch</button>
+            <div class="header-content">
+                <div class="header-content__text">
+                    <h1 class="headr-content__title"> The best crutches for your code</h1>
+                    <p class="headr-content__description">Do not invent a bicycle, we made crutches for you - use them,
+                        it's
+                        almost free
+                    </p>
+                    <button class="button button--shadow">Choose a crutch</button>
+                </div>
+
+                <img class="headr-contet__img" src="img/crutches.png" alt="">
+
             </div>
-            <div class="headr-contet__img">
-                <img src="#" alt="">
-            </div>
+            <!-- /.header-content -->
         </div>
-        <!-- /.header-content -->
-</div>
-<!-- /.container -->
-        
+        <!-- /.container -->
+
     </header>
     <!-- /.header -->
 </body>
