Added Catalog section

--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
                 <div class="logo">Amazonka</div>
                 <!-- /.logo -->
                 <ul class="nav">
-                    <li class="nav__item"><a href="#">Catalog</a></li>
-                    <li class="nav__item"><a href="#">reviews</a></li>
-                    <li class="nav__item"><a href="#">Category</a></li>
-                    <li class="nav__item"><a href="#">Contact</a></li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Catalog</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">reviews</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Category</a>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Contact</a>
+                    </li>
                 </ul>
                 <!-- /.nav -->
                 <a href="tel:18002503020" class="phone">1800-250-3020</a>
@@ -47,6 +55,69 @@
 
     </header>
     <!-- /.header -->
+
+
+    <!-- #################### CATALOG section #################### -->
+    <section class="section goods">
+
+        <div class="container">
+            <h2 class="section__title">Catalog</h2>
+            <div class="cards">
+                <div class="card goods__card">
+                    <img src="img/image 2.png" alt="" class="card__image">
+                    <div class="card__text">
+                        <h3 class="card__title">Your own slider in pure JS</h3>
+                        <strong class="card__price">590.</strong>
+                    </div>
+                    <button class="button card__button">Buy Now</button>
+                </div>
+                <div class="card goods__card">
+                    <img src="img/image 2-1.png" alt="" class="card__image">
+                    <div class="card__text">
+                        <h3 class="card__title">JS - free popup</h3>
+                        <strong class="card__price">390.</strong>
+                    </div>
+                    <button class="button card__button">Buy Now</button>
+                </div>
+                <div class="card goods__card">
+                    <img src="img/image 2-2.png" alt="" class="card__image">
+                    <div class="card__text">
+                        <h3 class="card__title">Tabs, menus, and pure CSS accordion with toaster</h3>
+                        <strong class="card__price">690.</strong>
+                    </div>
+                    <button class="button card__button">Buy Now</button>
+                </div>
+                <div class="card goods__card">
+                    <img src="img/image 2.png" alt="" class="card__image">
+                    <div class="card__text">
+                        <h3 class="card__title">Gallery in pop-up at three libraries</h3>
+                        <strong class="card__price">590.</strong>
+                    </div>
+                    <button class="button card__button">Buy Now</button>
+                </div>
+                <div class="card goods__card">
+                    <img src="img/image 2.png" alt="" class="card__image">
+                    <div class="card__text">
+                        <h3 class="card__title">Email data script with stackoverflow</h3>
+                        <strong class="card__price">590.</strong>
+                    </div>
+                    <button class="button card__button">Buy Now</button>
+                </div>
+                <div class="card goods__card">
+                    <img src="img/image 2.png" alt="" class="card__image">
+                    <div class="card__text">
+                        <h3 class="card__title">Vanilla tooltip overlay content</h3>
+                        <strong class="card__price">590.</strong>
+                    </div>
+                    <button class="button card__button">Buy Now</button>
+                </div>
+            </div>
+        </div><!-- /.container -->
+
+    </section>
+    <!-- /.section -->
+
+    <!-- #################### End of CATALOG section #################### -->
 </body>
 
 </html>
