Finished Revie section + CSS

--- a/index.html
+++ b/index.html
@@ -116,8 +116,41 @@
 
     </section>
     <!-- /.section -->
-
     <!-- #################### End of CATALOG section #################### -->
-</body>
+
+    <!-- #################### Customer reviews section #################### -->
+    <section class="section reviews">
+      <div class="container">
+        <h2 class="section__title">Customer reviews</h2>
+        <div class="review-cards">
+          <div class="review-card">
+            <img src="img/reviews/image 2.png" alt="" class="review-card__image">
+            <h4 class="review-card__title">Julia, 24 years old</h4>
+            <p class="review-card_text">It is very convenient to use ready-made crutches and not to search for them on
+              the network, thanks!</p>
+          </div>
+          <div class="review-card">
+            <img src="img/reviews/image 2-1.png" alt="" class="review-card__image">
+            <h4 class="review-card__title">Mark, 16 years old</h4>
+            <p class="review-card_text">Thanks for crutches, I didn’t have to come up with a bicycle, I saved time!</p>
+          </div>
+          <div class="review-card">
+            <img src="img/reviews/image 2-2.png" alt="" class="review-card__image">
+            <h4 class="review-card__title">Rami, 20 years old</h4>
+            <p class="review-card_text">I downloaded a crutch, installed it in a project, got out a conflict with other
+              crutches!</p>
+          </div>
+          <div class="review-card">
+            <img src="img/reviews/image 2-3.png" alt="" class="review-card__image">
+            <h4 class="review-card__title">Kemran 32 years</h4>
+            <p class="review-card_text">Everything is interesting, but it’s not clear, I wanted to buy, but I didn’t
+              understand anything, thanks</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- #################### End of Customer reviews section #################### -->
+    
+  </body>
 
 </html>
