Final footer + form

--- a/index.html
+++ b/index.html
@@ -2,155 +2,201 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- external CSS -->
-    <link rel="stylesheet" href="css/amazon.css">
-    <title>Amazon-shop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- external CSS -->
+  <link rel="stylesheet" href="css/amazon.css">
+  <title>Amazon-shop</title>
 </head>
 
 <body>
-    <!-- Headr -->
-    <header class="header">
-        <div class="container">
-            <div class="top header__top">
-                <div class="logo">Amazonka</div>
-                <!-- /.logo -->
-                <ul class="nav">
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Catalog</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">reviews</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Category</a>
-                    </li>
-                    <li class="nav__item">
-                        <a class="nav__link" href="#">Contact</a>
-                    </li>
-                </ul>
-                <!-- /.nav -->
-                <a href="tel:18002503020" class="phone">1800-250-3020</a>
-            </div>
-            <!-- /.top -->
+  <!-- Headr -->
+  <header class="header">
+    <div class="container">
+      <div class="top header__top">
+        <div class="logo">Amazonka</div>
+        <!-- /.logo -->
+        <ul class="nav">
+          <li class="nav__item">
+            <a class="nav__link" href="#">Catalog</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">reviews</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Category</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#">Contact</a>
+          </li>
+        </ul>
+        <!-- /.nav -->
+        <a href="tel:18002503020" class="phone">1800-250-3020</a>
+      </div>
+      <!-- /.top -->
 
-            <div class="header-content">
-                <div class="header-content__text">
-                    <h1 class="headr-content__title"> The best crutches for your code</h1>
-                    <p class="headr-content__description">Do not invent a bicycle, we made crutches for you - use them,
-                        it's
-                        almost free
-                    </p>
-                    <button class="button button--shadow">Choose a crutch</button>
-                </div>
-
-                <img class="headr-contet__img" src="img/crutches.png" alt="">
-
-            </div>
-            <!-- /.header-content -->
+      <div class="header-content">
+        <div class="header-content__text">
+          <h1 class="headr-content__title"> The best crutches for your code</h1>
+          <p class="headr-content__description">Do not invent a bicycle, we made crutches for you - use them,
+            it's
+            almost free
+          </p>
+          <button class="button button--shadow">Choose a crutch</button>
         </div>
-        <!-- /.container -->
 
-    </header>
-    <!-- /.header -->
+        <img class="headr-contet__img" src="img/crutches.png" alt="">
+
+      </div>
+      <!-- /.header-content -->
+    </div>
+    <!-- /.container -->
+
+  </header>
+  <!-- /.header -->
 
 
-    <!-- #################### CATALOG section #################### -->
-    <section class="section goods">
+  <!-- #################### CATALOG section #################### -->
+  <section class="section goods">
 
-        <div class="container">
-            <h2 class="section__title">Catalog</h2>
-            <div class="cards">
-                <div class="card goods__card">
-                    <img src="img/image 2.png" alt="" class="card__image">
-                    <div class="card__text">
-                        <h3 class="card__title">Your own slider in pure JS</h3>
-                        <strong class="card__price">590.</strong>
-                    </div>
-                    <button class="button card__button">Buy Now</button>
-                </div>
-                <div class="card goods__card">
-                    <img src="img/image 2-1.png" alt="" class="card__image">
-                    <div class="card__text">
-                        <h3 class="card__title">JS - free popup</h3>
-                        <strong class="card__price">390.</strong>
-                    </div>
-                    <button class="button card__button">Buy Now</button>
-                </div>
-                <div class="card goods__card">
-                    <img src="img/image 2-2.png" alt="" class="card__image">
-                    <div class="card__text">
-                        <h3 class="card__title">Tabs, menus, and pure CSS accordion with toaster</h3>
-                        <strong class="card__price">690.</strong>
-                    </div>
-                    <button class="button card__button">Buy Now</button>
-                </div>
-                <div class="card goods__card">
-                    <img src="img/image 2.png" alt="" class="card__image">
-                    <div class="card__text">
-                        <h3 class="card__title">Gallery in pop-up at three libraries</h3>
-                        <strong class="card__price">590.</strong>
-                    </div>
-                    <button class="button card__button">Buy Now</button>
-                </div>
-                <div class="card goods__card">
-                    <img src="img/image 2.png" alt="" class="card__image">
-                    <div class="card__text">
-                        <h3 class="card__title">Email data script with stackoverflow</h3>
-                        <strong class="card__price">590.</strong>
-                    </div>
-                    <button class="button card__button">Buy Now</button>
-                </div>
-                <div class="card goods__card">
-                    <img src="img/image 2.png" alt="" class="card__image">
-                    <div class="card__text">
-                        <h3 class="card__title">Vanilla tooltip overlay content</h3>
-                        <strong class="card__price">590.</strong>
-                    </div>
-                    <button class="button card__button">Buy Now</button>
-                </div>
-            </div>
-        </div><!-- /.container -->
-
-    </section>
-    <!-- /.section -->
-    <!-- #################### End of CATALOG section #################### -->
-
-    <!-- #################### Customer reviews section #################### -->
-    <section class="section reviews">
-      <div class="container">
-        <h2 class="section__title">Customer reviews</h2>
-        <div class="review-cards">
-          <div class="review-card">
-            <img src="img/reviews/image 2.png" alt="" class="review-card__image">
-            <h4 class="review-card__title">Julia, 24 years old</h4>
-            <p class="review-card_text">It is very convenient to use ready-made crutches and not to search for them on
-              the network, thanks!</p>
+    <div class="container">
+      <h2 class="section__title">Catalog</h2>
+      <div class="cards">
+        <div class="card goods__card">
+          <img src="img/image 2.png" alt="" class="card__image">
+          <div class="card__text">
+            <h3 class="card__title">Your own slider in pure JS</h3>
+            <strong class="card__price">590.</strong>
           </div>
-          <div class="review-card">
-            <img src="img/reviews/image 2-1.png" alt="" class="review-card__image">
-            <h4 class="review-card__title">Mark, 16 years old</h4>
-            <p class="review-card_text">Thanks for crutches, I didn’t have to come up with a bicycle, I saved time!</p>
+          <button class="button card__button">Buy Now</button>
+        </div>
+        <div class="card goods__card">
+          <img src="img/image 2-1.png" alt="" class="card__image">
+          <div class="card__text">
+            <h3 class="card__title">JS - free popup</h3>
+            <strong class="card__price">390.</strong>
           </div>
-          <div class="review-card">
-            <img src="img/reviews/image 2-2.png" alt="" class="review-card__image">
-            <h4 class="review-card__title">Rami, 20 years old</h4>
-            <p class="review-card_text">I downloaded a crutch, installed it in a project, got out a conflict with other
-              crutches!</p>
+          <button class="button card__button">Buy Now</button>
+        </div>
+        <div class="card goods__card">
+          <img src="img/image 2-2.png" alt="" class="card__image">
+          <div class="card__text">
+            <h3 class="card__title">Tabs, menus, and pure CSS accordion with toaster</h3>
+            <strong class="card__price">690.</strong>
           </div>
-          <div class="review-card">
-            <img src="img/reviews/image 2-3.png" alt="" class="review-card__image">
-            <h4 class="review-card__title">Kemran 32 years</h4>
-            <p class="review-card_text">Everything is interesting, but it’s not clear, I wanted to buy, but I didn’t
-              understand anything, thanks</p>
+          <button class="button card__button">Buy Now</button>
+        </div>
+        <div class="card goods__card">
+          <img src="img/image 2.png" alt="" class="card__image">
+          <div class="card__text">
+            <h3 class="card__title">Gallery in pop-up at three libraries</h3>
+            <strong class="card__price">590.</strong>
           </div>
+          <button class="button card__button">Buy Now</button>
+        </div>
+        <div class="card goods__card">
+          <img src="img/image 2.png" alt="" class="card__image">
+          <div class="card__text">
+            <h3 class="card__title">Email data script with stackoverflow</h3>
+            <strong class="card__price">590.</strong>
+          </div>
+          <button class="button card__button">Buy Now</button>
+        </div>
+        <div class="card goods__card">
+          <img src="img/image 2.png" alt="" class="card__image">
+          <div class="card__text">
+            <h3 class="card__title">Vanilla tooltip overlay content</h3>
+            <strong class="card__price">590.</strong>
+          </div>
+          <button class="button card__button">Buy Now</button>
         </div>
       </div>
-    </section>
-    <!-- #################### End of Customer reviews section #################### -->
-    
-  </body>
+    </div><!-- /.container -->
+
+  </section>
+  <!-- /.section -->
+  <!-- #################### End of CATALOG section #################### -->
+
+  <!-- #################### Customer reviews section #################### -->
+  <section class="section reviews">
+    <div class="container">
+      <h2 class="section__title">Customer reviews</h2>
+      <div class="review-cards">
+        <div class="review-card">
+          <img src="img/reviews/image 2.png" alt="" class="review-card__image">
+          <h4 class="review-card__title">Julia, 24 years old</h4>
+          <p class="review-card_text">It is very convenient to use ready-made crutches and not to search for them on
+            the network, thanks!</p>
+        </div>
+        <div class="review-card">
+          <img src="img/reviews/image 2-1.png" alt="" class="review-card__image">
+          <h4 class="review-card__title">Mark, 16 years old</h4>
+          <p class="review-card_text">Thanks for crutches, I didn’t have to come up with a bicycle, I saved time!</p>
+        </div>
+        <div class="review-card">
+          <img src="img/reviews/image 2-2.png" alt="" class="review-card__image">
+          <h4 class="review-card__title">Rami, 20 years old</h4>
+          <p class="review-card_text">I downloaded a crutch, installed it in a project, got out a conflict with other
+            crutches!</p>
+        </div>
+        <div class="review-card">
+          <img src="img/reviews/image 2-3.png" alt="" class="review-card__image">
+          <h4 class="review-card__title">Kemran 32 years</h4>
+          <p class="review-card_text">Everything is interesting, but it’s not clear, I wanted to buy, but I didn’t
+            understand anything, thanks</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- #################### End of Customer reviews section #################### -->
+
+  <!-- #################### Footer section #################### -->
+
+  <footer class="footer section">
+    <div class="container">
+      <h2 class="section__title">Contact us</h2>
+      <div class="contacts">
+        <div class="form">
+          <form action="#" class="contacts__form">
+            <div class="form__inputs">
+              <input type="text" class="input form__input" placeholder="Name">
+              <input type="email" class="input form__input" placeholder="Email">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" class="input form__input" placeholder="Yourour text">
+
+            </textarea>
+            <div class="form__buttons">
+              <button type="submit" class="button form__buttons">Send</button>
+              <div class="social">
+                <a href="#" class="social_link"><img src="img/social_media/Group 8-1.png" alt=""
+                    class="social__image"></a>
+                <a href="#" class="social_link"><img src="img/social_media/instagram.png" alt=""
+                    class="social__image"></a>
+                <a href="#" class="social_link"><img src="img/social_media/telegram.png" alt=""
+                    class="social__image"></a>
+                <a href="#" class="social_link"><img src="img/social_media/twitter.png" alt=""
+                    class="social__image"></a>
+                <a href="#" class="social_link"><img src="img/social_media/youtube.png" alt=""
+                    class="social__image"></a>
+                <a href="#" class="social_link"><img src="img/social_media/whatsupp.png" alt=""
+                    class="social__image"></a>
+              </div>
+            </div>
+          </form>
+
+        </div>
+        <map class="map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152515.25333588192!2d-6.385785668716187!3d53.32444313798125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin!5e0!3m2!1sen!2sie!4v1568039247282!5m2!1sen!2sie"
+            frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </map>
+      </div>
+    </div>
+  </footer>
+
+  <!-- #################### End of Footer section #################### -->
+
+</body>
 
 </html>
