Finished the RWD

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Slich link / connecting Slich slider styles-->
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <!-- external CSS -->
   <link rel="stylesheet" href="css/amazon.css">
   <title>Amazon-shop</title>
@@ -163,7 +165,7 @@
               <input type="text" class="input form__input" placeholder="Name">
               <input type="email" class="input form__input" placeholder="Email">
             </div>
-            <textarea name="" id="" cols="30" rows="10" class="input form__input" placeholder="Yourour text">
+            <textarea  cols="30" rows="10" class="input form__input" placeholder="Yourour text">
 
             </textarea>
             <div class="form__buttons">
@@ -194,9 +196,22 @@
       </div>
     </div>
   </footer>
+  
 
   <!-- #################### End of Footer section #################### -->
 
+  <!-- jQuery CDN  connecting jQuery library-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Slich link / connecting Slich slider styles-->
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  
+  <!-- Slich JS file CDN connection -->
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+
+  <!-- External js -->
+  <script src="js/main.js"></script>
 </body>
 
 </html>
